--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "cos-js-sdk-v5": "^1.1.5",
+    "echarts": "^5.0.0",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
